Premier modèle, max flow et page rank

--- a/Kaggle/Exploration.ipynb
+++ b/Kaggle/Exploration.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4   1358   5722          1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "0.5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4    385   5481"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_info = pd.read_csv('data/node_information.csv')"
+    "node_info = pd.read_csv('data/node_information.csv', header = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +356,7 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>...</th>\n",
+       "      <th>923</th>\n",
        "      <th>924</th>\n",
        "      <th>925</th>\n",
        "      <th>926</th>\n",
@@ -365,13 +366,12 @@
        "      <th>930</th>\n",
        "      <th>931</th>\n",
        "      <th>932</th>\n",
-       "      <th>933</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2589</th>\n",
-       "      <td>5141</td>\n",
+       "      <th>929</th>\n",
+       "      <td>1747</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -391,11 +391,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>61</td>\n",
+       "      <th>1696</th>\n",
+       "      <td>3198</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -415,11 +415,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3546</th>\n",
-       "      <td>7434</td>\n",
+       "      <th>3049</th>\n",
+       "      <td>6196</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -439,11 +439,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1184</th>\n",
-       "      <td>2223</td>\n",
+       "      <th>202</th>\n",
+       "      <td>356</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -463,11 +463,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1771</th>\n",
-       "      <td>3350</td>\n",
+       "      <th>1988</th>\n",
+       "      <td>3803</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -487,32 +487,32 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 934 columns</p>\n",
+       "<p>5 rows × 933 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id    1    2    3    4    5    6    7    8    9  ...  924  925  926  \\\n",
-       "2589  5141  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-       "32      61  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-       "3546  7434  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-       "1184  2223  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-       "1771  3350  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
+       "        id    1    2    3    4    5    6    7    8    9  ...  923  924  925  \\\n",
+       "929   1747  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
+       "1696  3198  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
+       "3049  6196  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
+       "202    356  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
+       "1988  3803  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
        "\n",
-       "      927  928  929  930  931  932  933  \n",
-       "2589  0.0  0.0  0.0  0.0  0.0  0.0  4.0  \n",
-       "32    0.0  0.0  0.0  0.0  0.0  0.0  8.0  \n",
-       "3546  0.0  0.0  0.0  0.0  0.0  0.0  2.0  \n",
-       "1184  0.0  0.0  0.0  0.0  0.0  0.0  2.0  \n",
-       "1771  0.0  0.0  0.0  0.0  0.0  0.0  2.0  \n",
+       "      926  927  928  929  930  931  932  \n",
+       "929   0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1696  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3049  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "202   0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1988  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
        "\n",
-       "[5 rows x 934 columns]"
+       "[5 rows x 933 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -553,29 +553,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1424</th>\n",
-       "      <td>2666</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>2621</th>\n",
+       "      <td>5202</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>618</th>\n",
-       "      <td>1147</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1597</th>\n",
-       "      <td>2997</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2767</th>\n",
-       "      <td>5522</td>\n",
+       "      <th>1916</th>\n",
+       "      <td>3647</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1073</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>8.0</td>\n",
+       "      <th>2379</th>\n",
+       "      <td>4644</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>789</th>\n",
+       "      <td>1471</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>961</th>\n",
+       "      <td>1797</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -583,14 +583,14 @@
       ],
       "text/plain": [
        "        id  nb_features\n",
-       "1424  2666         16.0\n",
-       "618   1147          4.0\n",
-       "1597  2997          8.0\n",
-       "2767  5522         10.0\n",
-       "1073  2013          8.0"
+       "2621  5202          5.0\n",
+       "1916  3647         10.0\n",
+       "2379  4644          4.0\n",
+       "789   1471          4.0\n",
+       "961   1797         10.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,9 @@
     "- GradientBoosting\n",
     "- XGB\n",
     "\n",
-    "if time left : Stochastic Random Walk ?"
+    "if time left : Stochastic Random Walk ?\n",
+    "\n",
+    "**Penser à checker la condition node1 == node2**"
    ]
   },
   {
@@ -1878,6 +1880,243 @@
    "metadata": {},
    "source": [
     "In fact, for each node, we want to play multiple scenarios of PageRank paths on the graph starting from *x*, and we count the frequency of *y* being in the path"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Supervised features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max flow"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compute the max flow of each node. Before, we need to define the capacity for each edge."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for edge in graph.edges:\n",
+    "    graph.edges[edge][\"capacity\"] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_max_flow(row):\n",
+    "    \n",
+    "    if row['node1'] == row['node2']:\n",
+    "        return 0\n",
+    "\n",
+    "    flow_value, flow_dict = nx.maximum_flow(graph, _s = row['node1'], _t = row['node2'])\n",
+    "    return flow_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004859919954259577"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[test['node1'] == test['node2']]['node1'].count()/test.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['max_flow'] = train.apply(lambda x: compute_max_flow(x), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['max_flow'] = test.apply(lambda x: compute_max_flow(x), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node1</th>\n",
+       "      <th>node2</th>\n",
+       "      <th>is_linked</th>\n",
+       "      <th>max_flow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8126</th>\n",
+       "      <td>361</td>\n",
+       "      <td>7272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7722</th>\n",
+       "      <td>3809</td>\n",
+       "      <td>7272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2814</th>\n",
+       "      <td>7082</td>\n",
+       "      <td>7272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625</th>\n",
+       "      <td>7426</td>\n",
+       "      <td>7571</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2510</th>\n",
+       "      <td>887</td>\n",
+       "      <td>7082</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8698</th>\n",
+       "      <td>6433</td>\n",
+       "      <td>6433</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3218</th>\n",
+       "      <td>2326</td>\n",
+       "      <td>2326</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4544</th>\n",
+       "      <td>3820</td>\n",
+       "      <td>3820</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5616</th>\n",
+       "      <td>1245</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1652</th>\n",
+       "      <td>4432</td>\n",
+       "      <td>4432</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10496 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      node1  node2  is_linked  max_flow\n",
+       "8126    361   7272          1        29\n",
+       "7722   3809   7272          1        29\n",
+       "2814   7082   7272          1        26\n",
+       "2625   7426   7571          1        24\n",
+       "2510    887   7082          1        24\n",
+       "...     ...    ...        ...       ...\n",
+       "8698   6433   6433          1         0\n",
+       "3218   2326   2326          1         0\n",
+       "4544   3820   3820          1         0\n",
+       "5616   1245   1245          1         0\n",
+       "1652   4432   4432          1         0\n",
+       "\n",
+       "[10496 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.sort_values(by = ['max_flow'], ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.to_csv('data/cache/train_max_flow.csv')"
    ]
   }
  ],
