Ajout max flow, common neighbors overlap et test scaling

--- a/Kaggle/Exploration.ipynb
+++ b/Kaggle/Exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4   1358   5722          1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
    "metadata": {},
    "source": [
     "### Neighborhood-based methods\n",
-    "- Common neighbors overlap\n",
+    "- Common neighbors overlap : ok\n",
     "- Jaccard coefficient\n",
     "- Adamic / Adar index\n",
     "- Preferential attachment\n",
@@ -742,13 +742,15 @@
     "### Supervised features\n",
     "- in/out degree\n",
     "- in/out volume\n",
-    "- max flow\n",
+    "- max flow : ok\n",
     "- prop flow\n",
     "- wikipedia features\n",
     "- PCA ?\n",
+    "- PageRank : ok\n",
+    "- Try to scale features : ok\n",
     "\n",
     "### Classifiers\n",
-    "- LogisticRegression\n",
+    "- LogisticRegression : ok\n",
     "- DecisionTree\n",
     "- GradientBoosting\n",
     "- XGB\n",
@@ -756,6 +758,71 @@
     "if time left : Stochastic Random Walk ?\n",
     "\n",
     "**Penser à checker la condition node1 == node2**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neighborhood based methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Common neighbors overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(graph.nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3604, 7272, 3252, 3842, 5083]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(nx.neighbors(graph, 2419))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(nx.common_neighbors(graph, 2419, 3604)))"
    ]
   },
   {
@@ -1971,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1997,126 +2064,114 @@
        "      <th></th>\n",
        "      <th>node1</th>\n",
        "      <th>node2</th>\n",
-       "      <th>is_linked</th>\n",
        "      <th>max_flow</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8126</th>\n",
+       "      <th>2379</th>\n",
        "      <td>361</td>\n",
-       "      <td>7272</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7722</th>\n",
        "      <td>3809</td>\n",
-       "      <td>7272</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2814</th>\n",
-       "      <td>7082</td>\n",
-       "      <td>7272</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2625</th>\n",
-       "      <td>7426</td>\n",
-       "      <td>7571</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2510</th>\n",
+       "      <th>1830</th>\n",
        "      <td>887</td>\n",
-       "      <td>7082</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2187</td>\n",
        "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2518</th>\n",
+       "      <td>2970</td>\n",
+       "      <td>5560</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1171</th>\n",
+       "      <td>361</td>\n",
+       "      <td>6551</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1615</th>\n",
+       "      <td>3976</td>\n",
+       "      <td>6386</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8698</th>\n",
-       "      <td>6433</td>\n",
-       "      <td>6433</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1715</th>\n",
+       "      <td>4929</td>\n",
+       "      <td>4929</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3218</th>\n",
-       "      <td>2326</td>\n",
-       "      <td>2326</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1549</th>\n",
+       "      <td>381</td>\n",
+       "      <td>381</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4544</th>\n",
-       "      <td>3820</td>\n",
-       "      <td>3820</td>\n",
-       "      <td>1</td>\n",
+       "      <th>457</th>\n",
+       "      <td>3104</td>\n",
+       "      <td>3104</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5616</th>\n",
-       "      <td>1245</td>\n",
-       "      <td>1245</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2609</th>\n",
+       "      <td>4578</td>\n",
+       "      <td>4578</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1652</th>\n",
-       "      <td>4432</td>\n",
-       "      <td>4432</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1608</th>\n",
+       "      <td>5142</td>\n",
+       "      <td>5142</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10496 rows × 4 columns</p>\n",
+       "<p>3498 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      node1  node2  is_linked  max_flow\n",
-       "8126    361   7272          1        29\n",
-       "7722   3809   7272          1        29\n",
-       "2814   7082   7272          1        26\n",
-       "2625   7426   7571          1        24\n",
-       "2510    887   7082          1        24\n",
-       "...     ...    ...        ...       ...\n",
-       "8698   6433   6433          1         0\n",
-       "3218   2326   2326          1         0\n",
-       "4544   3820   3820          1         0\n",
-       "5616   1245   1245          1         0\n",
-       "1652   4432   4432          1         0\n",
+       "      node1  node2  max_flow\n",
+       "2379    361   3809        31\n",
+       "1830    887   2187        24\n",
+       "2518   2970   5560        23\n",
+       "1171    361   6551        23\n",
+       "1615   3976   6386        19\n",
+       "...     ...    ...       ...\n",
+       "1715   4929   4929         0\n",
+       "1549    381    381         0\n",
+       "457    3104   3104         0\n",
+       "2609   4578   4578         0\n",
+       "1608   5142   5142         0\n",
        "\n",
-       "[10496 rows x 4 columns]"
+       "[3498 rows x 3 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.sort_values(by = ['max_flow'], ascending = False)"
+    "test.sort_values(by = ['max_flow'], ascending = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('data/cache/train_max_flow.csv')"
+    "test.to_csv('data/cache/test_max_flow.csv')"
    ]
   }
  ],
