--- a/Kaggle/Exploration.ipynb
+++ b/Kaggle/Exploration.ipynb
@@ -686,7 +686,7 @@
     "\n",
     "### Network proximity-based methods\n",
     "- Shortest path length\n",
-    "- Katz $_\\beta$ measure\n",
+    "- Katz $_\\beta$ measure : ok mais marche bof, faudrait faire de la cross-validation ou du grid search sur le $\\beta$\n",
     "- Rooted PageRank\n",
     "\n",
     "### Supervised features\n",
@@ -700,9 +700,9 @@
     "\n",
     "### Classifiers\n",
     "- LogisticRegression : ok\n",
-    "- DecisionTree\n",
-    "- GradientBoosting\n",
-    "- XGB\n",
+    "- DecisionTree : ok\n",
+    "- GradientBoosting : ok\n",
+    "- XGB : ok\n",
     "\n",
     "if time left : Stochastic Random Walk ?\n",
     "\n",
@@ -892,6 +892,57 @@
    "metadata": {},
    "source": [
     "## Network proximity-based methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shortest path length"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problème si on prend le shortest path : leakage ! Les shortest paths de longueur 1 donnent target = 1. Donc on calcule un shortest path en excluant les chemins de longueur 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1 = list(graph.nodes)[rd.randint(0, graph.number_of_nodes())]\n",
+    "node2 = list(graph.nodes)[rd.randint(0, graph.number_of_nodes())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "cutoff = 2\n",
+    "length = 0\n",
+    "while length == 0 and cutoff < 20:\n",
+    "    sps = list(nx.all_simple_paths(graph, node1, node2, cutoff = cutoff))\n",
+    "    for path in sps:\n",
+    "        if len(path) > 2:\n",
+    "            length = len(path)\n",
+    "    cutoff += 1\n",
+    "print(length)"
    ]
   },
   {
