--- a/Projet/jeu.ipynb
+++ b/Projet/jeu.ipynb
@@ -23,6 +23,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "from utils import propose_best_word"
    ]
   },
@@ -36,41 +37,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = np.array([\"Le\", \"rêve\", \"dans\", \"le\", \"pavillon\", \"rouge\"])\n",
-    "title_mask = np.full(title.shape, \"_\")"
+    "titre = \"Le Rêve dans le pavillon rouge\"\n",
+    "article = \"Le Rêve dans le pavillon rouge écrit en l'espace de dix ans par Cao Xueqin est le dernier en date des quatre grands romans de la littérature classique chinoise, considéré par Mao Zedong comme l'une des fiertés de la Chine2. Il fut écrit au milieu du xviiie siècle durant la dynastie Qing. Il est considéré comme l'un des chefs-d’œuvre de la littérature chinoise, si ce n'est le plus prestigieux, et est généralement considéré comme l'apogée de l'art romanesque chinois (autobiographique, pour une part) ; à ce titre, l'immense œuvre fait partie de la collection UNESCO d'œuvres représentatives. L'exégèse du Rêve dans le pavillon rouge et tout ce qui s'y rapporte représente un pan entier de l'étude littéraire que l'on appelle « rougeologie »\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['_', '_', '_', '_', '_', '_'], dtype='<U1')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "title_mask"
+    "included_words = [\"L'\",\n",
+    " 'de',\n",
+    "  '(',\n",
+    " ')',\n",
+    " 'en',\n",
+    " ',',\n",
+    " 'est',\n",
+    " 'une',\n",
+    " 'le',\n",
+    " 'dans',\n",
+    " 'la',\n",
+    " 'à',\n",
+    " 'pour',\n",
+    " 'entre',\n",
+    " 'des',\n",
+    " \"d'\",\n",
+    " 'qui',\n",
+    " 'Ces',\n",
+    " 'et',\n",
+    " 'sur',\n",
+    " 'les',\n",
+    " \"n'\",\n",
+    " ':',\n",
+    " '«',\n",
+    " 'plus',\n",
+    " '»',\n",
+    " 'du',\n",
+    " 'par',\n",
+    " \"s'\",\n",
+    " 'y',\n",
+    " 'ainsi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for _ in range(20):\n",
+    "#     new_word = input()\n",
+    "#     if new_word not in included_words:\n",
+    "#         included_words.append(new_word)"
    ]
   },
   {
